src/lib/python2/Python2Parser.js
// Generated from /Users/libowen/Desktop/Code/gitlab.prod.dtstack.cn/dt-insight-front/infrastructure/dt-python-parser/src/grammar/python2/Python2.g4 by ANTLR 4.8
// jshint ignore: start
var antlr4 = require('antlr4/index');
var Python2Listener = require('./Python2Listener').Python2Listener;
var Python2Visitor = require('./Python2Visitor').Python2Visitor;

var grammarFileName = "Python2.g4";




var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'@'", "'def'", "':'", "'='", "','", "'*'", "'**'", 
                     "';'", "'+='", "'-='", "'*='", "'/='", "'%='", "'&='", 
                     "'|='", "'^='", "'<<='", "'>>='", "'**='", "'//='", 
                     "'>>'", "'del'", "'pass'", "'break'", "'continue'", 
                     "'return'", "'raise'", "'import'", "'from'", "'.'", 
                     "'as'", "'global'", "'exec'", "'in'", "'assert'", "'if'", 
                     "'elif'", "'else'", "'while'", "'for'", "'try'", "'finally'", 
                     "'with'", "'except'", "'lambda'", "'or'", "'and'", 
                     "'not'", "'<'", "'>'", "'=='", "'>='", "'<='", "'<>'", 
                     "'!='", "'is'", "'|'", "'^'", "'&'", "'<<'", "'+'", 
                     "'-'", "'/'", "'%'", "'//'", "'~'", "'`'", "'class'", 
                     "'yield'", null, null, null, null, null, null, "'('", 
                     "')'", "'{'", "'}'", "'['", "']'" ];

var symbolicNames = [ null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, "NAME", 
                      "NUMBER", "STRING", "LINENDING", "WHITESPACE", "COMMENT", 
                      "OPEN_PAREN", "CLOSE_PAREN", "OPEN_BRACE", "CLOSE_BRACE", 
                      "OPEN_BRACKET", "CLOSE_BRACKET", "UNKNOWN", "INDENT", 
                      "DEDENT", "NEWLINE", "ENDMARKER" ];

var ruleNames =  [ "program", "single_input", "file_input", "eval_input", 
                   "decorator", "decorators", "decorated", "funcdef", "parameters", 
                   "varargslist", "fpdef", "fplist", "stmt", "simple_stmt", 
                   "small_stmt", "expr_stmt", "augassign", "print_stmt", 
                   "del_stmt", "pass_stmt", "flow_stmt", "break_stmt", "continue_stmt", 
                   "return_stmt", "yield_stmt", "raise_stmt", "import_stmt", 
                   "import_name", "import_from", "import_as_name", "dotted_as_name", 
                   "import_as_names", "dotted_as_names", "dotted_name", 
                   "global_stmt", "exec_stmt", "assert_stmt", "compound_stmt", 
                   "if_stmt", "while_stmt", "for_stmt", "try_stmt", "with_stmt", 
                   "with_item", "except_clause", "suite", "testlist_safe", 
                   "old_test", "old_lambdef", "test", "or_test", "and_test", 
                   "not_test", "comparison", "comp_op", "expr", "xor_expr", 
                   "and_expr", "shift_expr", "arith_expr", "term", "factor", 
                   "power", "atom", "listmaker", "testlist_comp", "lambdef", 
                   "trailer", "subscriptlist", "subscript", "sliceop", "exprlist", 
                   "testlist", "dictorsetmaker", "classdef", "arglist", 
                   "argument", "list_iter", "list_for", "list_if", "comp_iter", 
                   "comp_for", "comp_if", "testlist1", "encoding_decl", 
                   "yield_expr" ];

function Python2Parser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

Python2Parser.prototype = Object.create(antlr4.Parser.prototype);
Python2Parser.prototype.constructor = Python2Parser;

Object.defineProperty(Python2Parser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

Python2Parser.EOF = antlr4.Token.EOF;
Python2Parser.T__0 = 1;
Python2Parser.T__1 = 2;
Python2Parser.T__2 = 3;
Python2Parser.T__3 = 4;
Python2Parser.T__4 = 5;
Python2Parser.T__5 = 6;
Python2Parser.T__6 = 7;
Python2Parser.T__7 = 8;
Python2Parser.T__8 = 9;
Python2Parser.T__9 = 10;
Python2Parser.T__10 = 11;
Python2Parser.T__11 = 12;
Python2Parser.T__12 = 13;
Python2Parser.T__13 = 14;
Python2Parser.T__14 = 15;
Python2Parser.T__15 = 16;
Python2Parser.T__16 = 17;
Python2Parser.T__17 = 18;
Python2Parser.T__18 = 19;
Python2Parser.T__19 = 20;
Python2Parser.T__20 = 21;
Python2Parser.T__21 = 22;
Python2Parser.T__22 = 23;
Python2Parser.T__23 = 24;
Python2Parser.T__24 = 25;
Python2Parser.T__25 = 26;
Python2Parser.T__26 = 27;
Python2Parser.T__27 = 28;
Python2Parser.T__28 = 29;
Python2Parser.T__29 = 30;
Python2Parser.T__30 = 31;
Python2Parser.T__31 = 32;
Python2Parser.T__32 = 33;
Python2Parser.T__33 = 34;
Python2Parser.T__34 = 35;
Python2Parser.T__35 = 36;
Python2Parser.T__36 = 37;
Python2Parser.T__37 = 38;
Python2Parser.T__38 = 39;
Python2Parser.T__39 = 40;
Python2Parser.T__40 = 41;
Python2Parser.T__41 = 42;
Python2Parser.T__42 = 43;
Python2Parser.T__43 = 44;
Python2Parser.T__44 = 45;
Python2Parser.T__45 = 46;
Python2Parser.T__46 = 47;
Python2Parser.T__47 = 48;
Python2Parser.T__48 = 49;
Python2Parser.T__49 = 50;
Python2Parser.T__50 = 51;
Python2Parser.T__51 = 52;
Python2Parser.T__52 = 53;
Python2Parser.T__53 = 54;
Python2Parser.T__54 = 55;
Python2Parser.T__55 = 56;
Python2Parser.T__56 = 57;
Python2Parser.T__57 = 58;
Python2Parser.T__58 = 59;
Python2Parser.T__59 = 60;
Python2Parser.T__60 = 61;
Python2Parser.T__61 = 62;
Python2Parser.T__62 = 63;
Python2Parser.T__63 = 64;
Python2Parser.T__64 = 65;
Python2Parser.T__65 = 66;
Python2Parser.T__66 = 67;
Python2Parser.T__67 = 68;
Python2Parser.T__68 = 69;
Python2Parser.NAME = 70;
Python2Parser.NUMBER = 71;
Python2Parser.STRING = 72;
Python2Parser.LINENDING = 73;
Python2Parser.WHITESPACE = 74;
Python2Parser.COMMENT = 75;
Python2Parser.OPEN_PAREN = 76;
Python2Parser.CLOSE_PAREN = 77;
Python2Parser.OPEN_BRACE = 78;
Python2Parser.CLOSE_BRACE = 79;
Python2Parser.OPEN_BRACKET = 80;
Python2Parser.CLOSE_BRACKET = 81;
Python2Parser.UNKNOWN = 82;
Python2Parser.INDENT = 83;
Python2Parser.DEDENT = 84;
Python2Parser.NEWLINE = 85;
Python2Parser.ENDMARKER = 86;

Python2Parser.RULE_program = 0;
Python2Parser.RULE_single_input = 1;
Python2Parser.RULE_file_input = 2;
Python2Parser.RULE_eval_input = 3;
Python2Parser.RULE_decorator = 4;
Python2Parser.RULE_decorators = 5;
Python2Parser.RULE_decorated = 6;
Python2Parser.RULE_funcdef = 7;
Python2Parser.RULE_parameters = 8;
Python2Parser.RULE_varargslist = 9;
Python2Parser.RULE_fpdef = 10;
Python2Parser.RULE_fplist = 11;
Python2Parser.RULE_stmt = 12;
Python2Parser.RULE_simple_stmt = 13;
Python2Parser.RULE_small_stmt = 14;
Python2Parser.RULE_expr_stmt = 15;
Python2Parser.RULE_augassign = 16;
Python2Parser.RULE_print_stmt = 17;
Python2Parser.RULE_del_stmt = 18;
Python2Parser.RULE_pass_stmt = 19;
Python2Parser.RULE_flow_stmt = 20;
Python2Parser.RULE_break_stmt = 21;
Python2Parser.RULE_continue_stmt = 22;
Python2Parser.RULE_return_stmt = 23;
Python2Parser.RULE_yield_stmt = 24;
Python2Parser.RULE_raise_stmt = 25;
Python2Parser.RULE_import_stmt = 26;
Python2Parser.RULE_import_name = 27;
Python2Parser.RULE_import_from = 28;
Python2Parser.RULE_import_as_name = 29;
Python2Parser.RULE_dotted_as_name = 30;
Python2Parser.RULE_import_as_names = 31;
Python2Parser.RULE_dotted_as_names = 32;
Python2Parser.RULE_dotted_name = 33;
Python2Parser.RULE_global_stmt = 34;
Python2Parser.RULE_exec_stmt = 35;
Python2Parser.RULE_assert_stmt = 36;
Python2Parser.RULE_compound_stmt = 37;
Python2Parser.RULE_if_stmt = 38;
Python2Parser.RULE_while_stmt = 39;
Python2Parser.RULE_for_stmt = 40;
Python2Parser.RULE_try_stmt = 41;
Python2Parser.RULE_with_stmt = 42;
Python2Parser.RULE_with_item = 43;
Python2Parser.RULE_except_clause = 44;
Python2Parser.RULE_suite = 45;
Python2Parser.RULE_testlist_safe = 46;
Python2Parser.RULE_old_test = 47;
Python2Parser.RULE_old_lambdef = 48;
Python2Parser.RULE_test = 49;
Python2Parser.RULE_or_test = 50;
Python2Parser.RULE_and_test = 51;
Python2Parser.RULE_not_test = 52;
Python2Parser.RULE_comparison = 53;
Python2Parser.RULE_comp_op = 54;
Python2Parser.RULE_expr = 55;
Python2Parser.RULE_xor_expr = 56;
Python2Parser.RULE_and_expr = 57;
Python2Parser.RULE_shift_expr = 58;
Python2Parser.RULE_arith_expr = 59;
Python2Parser.RULE_term = 60;
Python2Parser.RULE_factor = 61;
Python2Parser.RULE_power = 62;
Python2Parser.RULE_atom = 63;
Python2Parser.RULE_listmaker = 64;
Python2Parser.RULE_testlist_comp = 65;
Python2Parser.RULE_lambdef = 66;
Python2Parser.RULE_trailer = 67;
Python2Parser.RULE_subscriptlist = 68;
Python2Parser.RULE_subscript = 69;
Python2Parser.RULE_sliceop = 70;
Python2Parser.RULE_exprlist = 71;
Python2Parser.RULE_testlist = 72;
Python2Parser.RULE_dictorsetmaker = 73;
Python2Parser.RULE_classdef = 74;
Python2Parser.RULE_arglist = 75;
Python2Parser.RULE_argument = 76;
Python2Parser.RULE_list_iter = 77;
Python2Parser.RULE_list_for = 78;
Python2Parser.RULE_list_if = 79;
Python2Parser.RULE_comp_iter = 80;
Python2Parser.RULE_comp_for = 81;
Python2Parser.RULE_comp_if = 82;
Python2Parser.RULE_testlist1 = 83;
Python2Parser.RULE_encoding_decl = 84;
Python2Parser.RULE_yield_expr = 85;


function ProgramContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = Python2Parser.RULE_program;
    return this;
}

ProgramContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ProgramContext.prototype.constructor = ProgramContext;

ProgramContext.prototype.single_input = function() {
    return this.getTypedRuleContext(Single_inputContext,0);
};

ProgramContext.prototype.file_input = function() {
    return this.getTypedRuleContext(File_inputContext,0);
};

ProgramContext.prototype.eval_input = function() {
    return this.getTypedRuleContext(Eval_inputContext,0);
};

ProgramContext.prototype.enterRule = function(listener) {
    if(listener instanceof Python2Listener ) {
        listener.enterProgram(this);
	}
};

ProgramContext.prototype.exitRule = function(listener) {
    if(listener instanceof Python2Listener ) {
        listener.exitProgram(this);
	}
};

ProgramContext.prototype.accept = function(visitor) {
    if ( visitor instanceof Python2Visitor ) {
        return visitor.visitProgram(this);
    } else {
        return visitor.visitChildren(this);
    }
};




Python2Parser.ProgramContext = ProgramContext;

Python2Parser.prototype.program = function() {

    var localctx = new ProgramContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, Python2Parser.RULE_program);
    try {
        this.state = 175;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,0,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 172;
            this.single_input();
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 173;
            this.file_input();
            break;

        case 3:
            this.enterOuterAlt(localctx, 3);
            this.state = 174;
            this.eval_input();
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function Single_inputContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = Python2Parser.RULE_single_input;
    return this;
}

Single_inputContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Single_inputContext.prototype.constructor = Single_inputContext;

Single_inputContext.prototype.NEWLINE = function() {
    return this.getToken(Python2Parser.NEWLINE, 0);
};

Single_inputContext.prototype.simple_stmt = function() {
    return this.getTypedRuleContext(Simple_stmtContext,0);
};

Single_inputContext.prototype.compound_stmt = function() {
    return this.getTypedRuleContext(Compound_stmtContext,0);
};

Single_inputContext.prototype.enterRule = function(listener) {
    if(listener instanceof Python2Listener ) {
        listener.enterSingle_input(this);
	}
};

Single_inputContext.prototype.exitRule = function(listener) {
    if(listener instanceof Python2Listener ) {
        listener.exitSingle_input(this);
	}
};

Single_inputContext.prototype.accept = function(visitor) {
    if ( visitor instanceof Python2Visitor ) {
        return visitor.visitSingle_input(this);
    } else {
        return visitor.visitChildren(this);
    }
};




Python2Parser.Single_inputContext = Single_inputContext;

Python2Parser.prototype.single_input = function() {

    var localctx = new Single_inputContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, Python2Parser.RULE_single_input);
    try {
        this.state = 182;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,1,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 177;
            this.match(Python2Parser.NEWLINE);
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 178;
            this.simple_stmt();
            break;

        case 3:
            this.enterOuterAlt(localctx, 3);
            this.state = 179;
            this.compound_stmt();
            this.state = 180;
            this.match(Python2Parser.NEWLINE);
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function File_inputContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = Python2Parser.RULE_file_input;
    return this;
}

File_inputContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
File_inputContext.prototype.constructor = File_inputContext;

File_inputContext.prototype.ENDMARKER = function() {
    return this.getToken(Python2Parser.ENDMARKER, 0);
};

File_inputContext.prototype.NEWLINE = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(Python2Parser.NEWLINE);
    } else {
        return this.getToken(Python2Parser.NEWLINE, i);
    }
};


File_inputContext.prototype.stmt = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(StmtContext);
    } else {
        return this.getTypedRuleContext(StmtContext,i);
    }
};

File_inputContext.prototype.enterRule = function(listener) {
    if(listener instanceof Python2Listener ) {
        listener.enterFile_input(this);
	}
};

File_inputContext.prototype.exitRule = function(listener) {
    if(listener instanceof Python2Listener ) {
        listener.exitFile_input(this);
	}
};

File_inputContext.prototype.accept = function(visitor) {
    if ( visitor instanceof Python2Visitor ) {
        return visitor.visitFile_input(this);
    } else {
        return visitor.visitChildren(this);
    }
};




Python2Parser.File_inputContext = File_inputContext;

Python2Parser.prototype.file_input = function() {

    var localctx = new File_inputContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, Python2Parser.RULE_file_input);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 188;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,3,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                this.state = 186;
                this._errHandler.sync(this);
                var la_ = this._interp.adaptivePredict(this._input,2,this._ctx);
                switch(la_) {
                case 1:
                    this.state = 184;
                    this.match(Python2Parser.NEWLINE);
                    break;

                case 2:
                    this.state = 185;
                    this.stmt();
                    break;

                } 
            }
            this.state = 190;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,3,this._ctx);
        }

        this.state = 191;
        this.match(Python2Parser.ENDMARKER);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function Eval_inputContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = Python2Parser.RULE_eval_input;
    return this;
}
